css add food-styles

--- a/admin_styles/food_styles.css
+++ b/admin_styles/food_styles.css
@@ -1,8 +1,9 @@
 h1 {
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
+
 }
+
 .container {
     /* background-color: rgb(246, 238, 228); */
     background-color: rgb(255, 240, 222);
@@ -11,7 +12,7 @@ h1 {
     margin: auto;
     padding: 10px;
     width: 100%;
-/* display: flex; */
+    /* display: flex; */
 
     padding: 3%;
     justify-content: center;
@@ -22,7 +23,7 @@ h1 {
 
 
 table {
-    width:fit-content;
+    width: fit-content;
     padding: 2%;
     margin: 1%;
     border: 1px solid rgba(0, 0, 0, 0.276);
@@ -40,7 +41,7 @@ th {
 td {
     width: auto;
     padding: 20px;
-    text-align:center;
+    text-align: center;
     margin: 3%;
 }
 
@@ -66,35 +67,45 @@ tr {
     z-index: 1;
     opacity: 50%;
 } */
-.save,.discard,input[type="file"],select,.back{
+.save,
+.discard,
+input[type="file"],
+select,
+.back {
     text-align: center;
     background-color: rgb(177, 70, 73, 0.833);
     font-weight: bold;
     color: white;
 }
-option{
+
+option {
     font-weight: bold;
 }
+
 .card {
     display: flex;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     flex-direction: column;
     position: relative;
-    width:auto;
-    height:auto;
+    width: auto;
+    height: auto;
     background-color: rgba(177, 70, 73, 0.833);
     padding: 0.5rem;
     margin: 1rem;
     padding-bottom: 1.5rem;
     border-radius: 1rem;
-    word-wrap:break-word;
-    flex:content;
+    word-wrap: break-word;
+    flex: content;
     text-align: center;
+    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
 }
 
 .row {
     padding: auto;
-    width:100%;
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
 }
@@ -107,6 +118,7 @@ button {
     width: 100%;
     box-shadow: 1px 1px black;
 }
+
 form,
 table {
     margin-left: auto;
@@ -115,21 +127,25 @@ table {
 
 img {
     border-radius: 10%;
-    width:100px;
+    width: 100px;
     height: auto;
-    object-fit:fill;
+    object-fit: fill;
 }
+
 .editbtn {
     text-align: center;
     background-color: rgb(177, 70, 73, 0.833);
     font-weight: bold;
     border-radius: 10%;
-    color: rgb(255, 240, 222);;
+    color: rgb(255, 240, 222);
+    ;
 }
-.sel-rest{
+
+.sel-rest {
     text-align: center;
 }
-a{
+
+a {
     color: rgb(255, 240, 222);
     text-decoration-line: none;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
