--- a/admin_styles/food_styles.css
+++ b/admin_styles/food_styles.css
@@ -1,27 +1,3 @@
-h1 {
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
-}
-
-.container {
-    /* background-color: rgb(246, 238, 228); */
-    background-color: rgb(255, 240, 222);
-    box-sizing: border-box;
-    border-radius: 20px;
-    margin: auto;
-    padding: 10px;
-    width: 100%;
-    /* display: flex; */
-
-    padding: 3%;
-    justify-content: center;
-    box-sizing: border-box;
-    background-image: url("../resourses/restaraunt_images/Logo50-20%.png");
-    background-repeat: no-repeat;
-}
-
-
 table {
     width: fit-content;
     padding: 2%;
@@ -33,13 +9,13 @@ table {
 th {
     background-color: rgb(248, 212, 173);
     padding: auto;
-    width: fit-content;
+    width: min-content;
     margin: 9%;
-    /* text-align: center; */
+    border: 1px solid rgba(0, 0, 0, 0.276);
 }
 
 td {
-    width: auto;
+    width: min-content;
     padding: 20px;
     text-align: center;
     margin: 3%;
@@ -50,23 +26,20 @@ tr {
     width: auto;
 }
 
+form,
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.food-items{
+    width: 100%;
+}
+
 #admin {
     width: 100%;
 }
 
-/* .label {
-    border-radius: 10%;
-    position: relative;
-    top: 10px;
-    left: 10px;
-    width: 200px;
-    height: 220px;
-    background-image: url("../resourses/restaraunt_images/Logo.png");
-    background-size: cover;
-    
-    z-index: 1;
-    opacity: 50%;
-} */
 .save,
 .discard,
 input[type="file"],
@@ -82,47 +55,28 @@ option {
     font-weight: bold;
 }
 
-.card {
-    display: flex;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    flex-direction: column;
-    position: relative;
-    width: auto;
-    height: auto;
-    background-color: rgba(177, 70, 73, 0.833);
-    padding: 0.5rem;
-    margin: 1rem;
-    padding-bottom: 1.5rem;
-    border-radius: 1rem;
-    word-wrap: break-word;
-    flex: content;
+.editbtn {
     text-align: center;
-    flex: 1;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0%;
-}
-
-.row {
-    padding: auto;
-    width: 100%;
-    display: flex;
-    flex-flow: row wrap;
-}
-
-body {
-    padding: 5%;
+    background-color: rgb(177, 70, 73, 0.833);
+    font-weight: bold;
+    border-radius: 10%;
+    color: rgb(255, 240, 222);
 }
 
 button {
     width: 100%;
     box-shadow: 1px 1px black;
+    font-size: medium;
 }
 
-form,
-table {
-    margin-left: auto;
-    margin-right: auto;
+button:hover{
+    background-color: rgb(255, 240, 222);
+    color: rgb(177, 70, 73, 0.833);
+}
+
+.back{
+    width: min-content;
+    flex: 1;
 }
 
 img {
@@ -132,21 +86,19 @@ img {
     object-fit: fill;
 }
 
-.editbtn {
-    text-align: center;
-    background-color: rgb(177, 70, 73, 0.833);
-    font-weight: bold;
-    border-radius: 10%;
-    color: rgb(255, 240, 222);
-    ;
-}
-
-.sel-rest {
+.selectrestaraunt{
     text-align: center;
 }
 
 a {
     color: rgb(255, 240, 222);
-    text-decoration-line: none;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-decoration-line: none; 
+}
+
+a:hover{
+    color: rgb(177, 70, 73, 0.833);
+}
+
+.back-btn{
+    text-align:end;
 }
