--- a/admin_styles/base.css
+++ b/admin_styles/base.css
@@ -1,12 +1,15 @@
 body {
     padding: 5%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2vw;
+    
 }
 
 h1 {
     text-align: center;
     color: rgb(177, 70, 73, 0.833);
     text-shadow: 1px 1px 1px black;
+    font-size:xx-large;
 }
 
 .container {
