--- a/admin_styles/food_styles.css
+++ b/admin_styles/food_styles.css
@@ -1,29 +1,32 @@
 table {
-    width: fit-content;
+    width: 100%;
     padding: 2%;
     margin: 1%;
     border: 1px solid rgba(0, 0, 0, 0.276);
     box-shadow: 1px 2px 3px black;
+    table-layout: fixed;
+
 }
 
 th {
     background-color: rgb(248, 212, 173);
     padding: auto;
-    width: min-content;
+    width: max-content;
     margin: 9%;
     border: 1px solid rgba(0, 0, 0, 0.276);
 }
 
 td {
-    width: min-content;
+    width: max-content;
     padding: 20px;
     text-align: center;
     margin: 3%;
 }
 
 tr {
-    padding: auto;
-    width: auto;
+    /* padding: auto;
+    width: auto; */
+    width:fit-content
 }
 
 form,
@@ -33,7 +36,9 @@ table {
 }
 
 .food-items{
-    width: 100%;
+    display: table;
+   
+    
 }
 
 #admin {
@@ -42,7 +47,7 @@ table {
 
 .save,
 .discard,
-input[type="file"],
+input[type="file"]::file-selector-button,
 select,
 .back {
     text-align: center;
@@ -61,12 +66,14 @@ option {
     font-weight: bold;
     border-radius: 10%;
     color: rgb(255, 240, 222);
+    width: 50px;
 }
 
 button {
-    width: 100%;
+    width: 7rem;
     box-shadow: 1px 1px black;
     font-size: medium;
+    margin-left: 1rem;
 }
 
 button:hover{
@@ -102,3 +109,8 @@ a:hover{
 .back-btn{
     text-align:end;
 }
+
+#food_img{
+    background-color: brown;
+}
+
