--- a/admin_styles/base.css
+++ b/admin_styles/base.css
@@ -2,7 +2,7 @@ body {
     padding: 5%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 1.2vw;
-    
+    /* min-width: 700px; */
 }
 
 h1 {
